# gepug

bookreader/: Makefile.am  configure.ac
bookreader/src/: Makefile.am  bookreader.c  bookreader.h  bookreader.ui  br-ebook-model.c  br-ebook-model.h  br-text-view.c  br-text-view.h  main.c
libgepub/: Makefile.am  README  configure.ac
libgepub/src/: Makefile.am  gepub-archive.c  gepub-archive.h  gepub-doc.c  gepub-doc.h  gepub-utils.c  gepub.h  libgepub-0.1.pc.in
